force-app/main/default/objects/WRDB_LV_QUBIT_MAPPING__mdt/WRDB_LV_QUBIT_MAPPING__mdt.object-meta.xml
<CustomObject>
    <label>WRDB LV QUBIT MAPPING</label>
    <pluralLabel>WRDB LV QUBIT MAPPINGS</pluralLabel>
</CustomObject>