force-app/main/default/objects/WRDB_LV_QUBIT_MAPPING__mdt/fields/LV_Category__c.field-meta.xml
<CustomField>
    <fullName>LV_Category__c</fullName>
    <label>LV Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>