force-app/main/default/objects/WRDB_LV_QUBIT_MAPPING__mdt/fields/Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Point__c</fullName>
    <label>Price Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>