force-app/main/default/objects/WRDB_LV_QUBIT_MAPPING__mdt/fields/Qubit_Category__c.field-meta.xml
<CustomField>
    <fullName>Qubit_Category__c</fullName>
    <label>Qubit Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>