force-app/main/default/objects/WRDB_LV_QUBIT_MAPPING__mdt/fields/Qubit_Function__c.field-meta.xml
<CustomField>
    <fullName>Qubit_Function__c</fullName>
    <label>Qubit Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>